copyright alignment fix

--- a/style.css
+++ b/style.css
@@ -2320,6 +2320,7 @@ a {
 .copyright {
   font-size: 1.125em;
   text-align: center;
+  align-items: center;
 }
 
 .footer-email {
